<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/numOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numOne"
        android:layout_below="@id/heading"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerVertical="true"/>


    <EditText
        android:id="@+id/numSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@id/numOne"
        android:gravity="end"
        android:layout_alignBaseline="@id/numOne"
        android:inputType="number"
        android:textSize="20sp"
        android:background="@null"
        android:hint="@string/hint" />

    <TextView
        android:id="@+id/numTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/numOne"
        android:layout_centerVertical="true"
        android:layout_marginTop="25dp"
        android:text="@string/numTwo"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
       android:id="@+id/numSecSpace"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toEndOf="@id/numTwo"
        android:layout_below="@id/numSpace"
        android:layout_marginStart="5dp"
        android:gravity="end"
        android:hint="@string/numSecSpace"
        android:layout_marginBottom="20dp"
        android:layout_alignBaseline="@id/numTwo"
        android:textSize="20sp"
        android:inputType="number"
        android:background="@null"
        />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop = "20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/empty"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:gravity="center"
        />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above = "@id/number"
        android:layout_centerHorizontal="true"
        android:text="@string/add"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@id/number"
        android:layout_centerHorizontal="true"
        android:text="@string/sub"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/number"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:text="@string/mul"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf = "@id/number"
        android:layout_centerVertical="true"
        android:text="@string/div"
        android:textSize="15sp"/>


    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sub"
        android:layout_marginTop="30dp"
        android:text="Clear"
        android:textSize="25sp" />


</RelativeLayout>

